--- a/style/style.css
+++ b/style/style.css
@@ -252,3 +252,20 @@ body {
 .mute-children *{
   pointer-events: none;
 }
+.lift {
+  animation: drag_start 250ms;
+  opacity: 0.2;
+}
+
+@keyframes drag_start {
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0.2;
+  }
+}
+
+.drop-area {
+  border:2px solid var(--accent-color);
+}
